welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:45: error: value or is not a member of Boolean
	if(c != Color.ORANGE or c! Color.BLUE){
                             ^